fixed spacing in userslist; Users:X with same behav as in the Flash player

--- a/bigbluebutton-html5/app/client/stylesheets/users.less
+++ b/bigbluebutton-html5/app/client/stylesheets/users.less
@@ -2,6 +2,9 @@
 
 #content {
   margin-top: 10px;
+  &:first-child {
+    margin-top: 0px;
+  }
   overflow: hidden;
   width: 100%;
   @media @mobile-portrait, @mobile-portrait-with-keyboard {
